crates/compiler/src/tests/e2e/good/0234_trait_show_impl/main.gom
trait Show {
    fn show(Self) -> string;
}

impl Show for int32 {
    fn show(self: int32) -> string {
        (self).to_string()
    }
}

impl Show for string {
    fn show(self: string) -> string {
        self
    }
}

fn print_it[T: Show](x: T) {
    println(Show::show(x));
}

fn main() {
    print_it(42);
    print_it("hello");
}
